--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -4,6 +4,9 @@
         font-family: 'Microsoft YaHei UI';
         text-indent: 2em;
     }
+    a:visited {
+        color: #0094ff;
+    }
 </style>
 
 <div class="box">
@@ -19,7 +22,7 @@
 
         <h2><span style="font-weight:bold;">BitAdminCore套件</span></h2>
         <h4><span style="font-weight:bold;">querySuite：</span></h4>
-        <p>querySuite是查询条件、查询操作、数据展示、分页控制一体化标注式查询套件。支持拖动排序？</p>
+        <p>querySuite是查询条件、查询操作、数据展示、分页控制一体化标注式查询套件，支持拖动排序。</p>
         <h4><span style="font-weight:bold;">formSuite：</span></h4>
         <p>formSuite是新增、修改一体化标注式表单套件。</p>
         <h4><span style="font-weight:bold;">fileupload：</span></h4>
@@ -30,7 +33,7 @@
 
         <h2><span style="font-weight:bold;">BitAdminCore框架</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
-        <p>提供基础的用户名、密码、验证码？</p>
+        <p>提供基础的用户名、密码、验证码</p>
         <p>支持负载均衡环境。</p>
         <p>支持微信（公众号、企业号、开放平台？）、QQ、微博？等常用第三方平台登录。</p>
         <h4><span style="font-weight:bold;">应用首页：</span></h4>
@@ -42,8 +45,8 @@
         <p>开发功能：系统菜单、页面操作、数据字典。</p>
         <p>流程引擎：流程配置、流程开发。</p>
         <h4><span style="font-weight:bold;">技术整合：</span></h4>
-        <p>待开发：QRCode、语音识别？百度地图？EChart图表？微信JS-SDK？</p>
-        <p>待开发：微信支付？支付宝支付？</p>
+        <p>QRCode、语音识别？百度地图？EChart图表？微信JS-SDK？</p>
+        <p>微信支付(<a href="pay.html">示例</a>)、支付宝支付(<a href="pay.html">示例</a>)</p>
     </div>
     
 </div>
