--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/login.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/login.html
@@ -43,22 +43,21 @@
                 <input type="password" id="txtPassword" class="form-control" placeholder="密码" value="123456">
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
             </div>
-            <div class="form-group has-feedback">
-                <span id="spanmsg" style="color:red;"></span>
-            </div>
             <div class="row">
-                <div class="col-xs-8" style="padding-left: 15px;">
-                    <div class="checkbox" style="padding-left:0px;">
-                        <label>
-                            <input type="checkbox"> 记住密码
-                        </label>
-                    </div>
+                <div class="col-xs-4" style="padding-left: 15px;">
+                    <input type="text" id="verifyCode" class="form-control" placeholder="验证码">
+                </div>
+                <div class="col-xs-4" style="padding-left: 15px;" id="divImg">
+                    <img id="verifyCodeImage" src="../../account/verifycode" style="cursor:pointer;" title="点击刷新" />
                 </div>
                 <!-- /.col -->
                 <div class="col-xs-4" style="padding-right: 15px;">
                     <button type="button" id="btnLogin" class="btn btn-primary btn-block ">登录</button>
                 </div>
                 <!-- /.col -->
+            </div>
+            <div class="form-group has-feedback">
+                <span id="spanmsg" style="color:red;"></span>
             </div>
             <div class="row" style="padding-left:15px;padding-top:5px;">
                 使用第三方账号登录
@@ -94,6 +93,10 @@
                 //window.location.href = "http://www.example.com/login.html"; //外部登录时启用
             }, "login");
 
+            $("#verifyCodeImage").click(function () {
+                $(this).attr("src", "../../account/verifycode?_" + Math.random());
+            });
+
             $("#btnLogin").click(function () {
                 var spanmsg = $("#spanmsg");
                 var userCode = $("#txtUserCode").val();
@@ -106,11 +109,17 @@
                     $("#spanmsg").text("请输入登录密码");
                     return;
                 }
+                var verifyCode = $("#verifyCode").val();
+                if (verifyCode == "") {
+                    $("#spanmsg").text("请输入验证码");
+                    return;
+                }
 
+                var spanmsg = $("#spanmsg");
                 $.showLoading();
                 $.ajax({
                     url: "../../account/login",
-                    data: { userCode: userCode, password: password },
+                    data: { userCode: userCode, password: password, verifyCode: verifyCode },
                     datatype: "json",
                     type: "post",
                     success: function (result) {
@@ -119,6 +128,7 @@
                         } else {
                             $("#spanmsg").text(result.msg);
                             $("#txtPassword").val('');
+                            $("#verifyCodeImage").attr("src", "../../account/verifycode?_" + Math.random());
                         }
                         $.hideLoading();
                     },
