--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/weixin.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/weixin.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="row">
-            公众号授权模式：<br />
+            <h4>公众号授权模式：</h4>
             snsapi_base 静默授权只能获取用户openid；<br />
             snsapi_userinfo 手动授权可通过openid获取基本信息。
         </div>
@@ -30,7 +30,7 @@
             <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx806943202a75a124&redirect_uri=http%3A%2F%2Fbit.bitdao.cn%2Faccount%2Fweixingzhsignin&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect" class="btn btn-success">公众号普通授权</a>
         </div>
         <div class="row">
-            企业号授权模式：<br />
+            <h4>企业号授权模式：</h4>
             snsapi_base 静默授权只能获取用户openid；<br />
             snsapi_userinfo 静默授权可通过openid获取基本信息。<br />
             snsapi_privateinfo：手动授权，可获取成员的详细信息，包含手机、邮箱。<br />
