--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -47,6 +47,13 @@
         <h4><span style="font-weight:bold;">技术整合：</span></h4>
         <p>QRCode、语音识别？百度地图？EChart图表？微信JS-SDK？</p>
         <p>微信支付(<a href="pay.html">示例</a>)、支付宝支付(<a href="pay.html">示例</a>)</p>
+        <p>个推平台(<a href="notice.html">示例</a>)</p>
+
+        <h2><span style="font-weight:bold;">BitAdminCore快速原型</span></h2>
+        <h4><span style="font-weight:bold;">Prototyping服务：</span></h4>
+        <p>提供快速原型制作，包括模板，数据源。</p>
+        <h4><span style="font-weight:bold;">Prototyping模板：</span></h4>
+        <p>只有一个增删查改。</p>
     </div>
     
 </div>
