--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/login.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>微信授权登录</title>
+    <title>登录</title>
     <meta name="description" content="BitAdminCore, Version 0.1, Alpha" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
