--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -4,6 +4,7 @@
         font-family: 'Microsoft YaHei UI';
         text-indent: 2em;
     }
+
     a:visited {
         color: #0094ff;
     }
@@ -11,13 +12,13 @@
 
 <div class="box">
     <div class="box-body" style="padding-left:20px;">
-        <h2 style="margin-top:0px;"><span style="font-weight:bold;">BitAdminCore介绍</span></h2>
-        <p>BitAdminCore是基于jQuery，Bootstrap，AdminLTE 的 NET Core开发框架。</p>
+        <h2 style="margin-top:10px;"><span style="font-weight:bold;">BitAdminCore介绍</span></h2>
+        <p>BitAdminCore是基于jQuery，Bootstrap，AdminLTE 的 NET Core开发框架，目前仅支持mssql数据库。</p>
         <h4><span style="font-weight:bold;">架构思想：</span></h4>
         <p>定位管理应用程序快速开发能力，以程序易读性为核心。</p>
         <p>采用布局与逻辑分离、前端后端分离的思路，降低耦合度。</p>
         <h4><span style="font-weight:bold;">规范约定：</span></h4>
-        <p>使用EF Core与SQL混合开发模式；数据库、javascript变量，使用骆驼命名法，例：userName。</p>
+        <p>使用EF Core与Sql语句混合开发模式；表字段、js变量，使用骆驼命名法，例：userName。</p>
         <p></p>
 
         <h2><span style="font-weight:bold;">BitAdminCore套件</span></h2>
@@ -31,23 +32,42 @@
         <p>bitSelect、bitRadio、bitCheckbox、bitAutoComplete、bitAutoComSelect</p>
         <p>bitTree、picker、datePicker、linkageSelect、treeTable</p>
 
-        <h2><span style="font-weight:bold;">BitAdminCore框架</span></h2>
+        <h2><span style="font-weight:bold;">BitAdminCore框架（网站）</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
-        <p>提供基础的用户名、密码、验证码</p>
-        <p>支持负载均衡环境。</p>
-        <p>支持微信（公众号、企业号、开放平台？）、QQ、微博？等常用第三方平台登录。</p>
+        <p>提供基础的用户名、密码、验证码、短信登录。支持负载均衡环境。</p>
+        <p>提供三方平台登录：微信？、QQ、微博？</p>
         <h4><span style="font-weight:bold;">应用首页：</span></h4>
-        <p>基础布局：头部、菜单、内容布局及功能实现,默认tab加载模式。</p>
+        <p>基础布局：头部、菜单、内容，默认tab加载模式，支持iframe。</p>
         <p>全局配置、通用操作、权限、日志等</p>
         <p>通知推送、点对点聊天？</p>
         <h4><span style="font-weight:bold;">基础功能：</span></h4>
         <p>系统管理：部门信息、用户信息、角色权限、日志查看。</p>
         <p>开发功能：系统菜单、页面操作、数据字典。</p>
-        <p>流程引擎：流程配置、流程开发。</p>
+        <p>流程引擎：流程配置、工作台。</p>
         <h4><span style="font-weight:bold;">技术整合：</span></h4>
-        <p>QRCode、语音识别？百度地图？EChart图表？微信JS-SDK？</p>
+        <p>QRCode、语音识别？百度地图？EChart图表？</p>
         <p>微信支付(<a href="pay.html">示例</a>)、支付宝支付(<a href="pay.html">示例</a>)</p>
         <p>个推平台(<a href="notice.html">示例</a>)</p>
+
+        <h2><span style="font-weight:bold;">BitAdminCore框架（微信）</span></h2>
+        <h4><span style="font-weight:bold;">登录页面：</span></h4>
+        <p>提供微信平台登录：公众号、企业号</p>
+        <p>提供用户名、密码、验证码、短信用户绑定。支持负载均衡环境。</p>
+        <h4><span style="font-weight:bold;">应用首页：</span></h4>
+        <p>基础布局：菜单、个人设置。</p>
+
+        <h2><span style="font-weight:bold;">BitAdminCore框架（APP）</span></h2>
+        <h4><span style="font-weight:bold;">登录页面：</span></h4>
+        <p>提供基础的用户名、密码、短信登录。</p>
+        <p>提供三方平台登录：微信、QQ、微博</p>
+        <h4><span style="font-weight:bold;">应用首页：</span></h4>
+        <p>基础布局：菜单、个人设置。</p>
+
+        <h2><span style="font-weight:bold;">BitAdminCore框架（手机）</span></h2>
+        <h4><span style="font-weight:bold;">登录页面：</span></h4>
+        <p>提供基础的用户名、密码、验证码、短信登录。支持负载均衡环境。</p>
+        <h4><span style="font-weight:bold;">应用首页：</span></h4>
+        <p>基础布局：菜单、个人设置。</p>
 
         <h2><span style="font-weight:bold;">BitAdminCore快速原型</span></h2>
         <h4><span style="font-weight:bold;">Prototyping服务：</span></h4>
@@ -55,5 +75,8 @@
         <h4><span style="font-weight:bold;">Prototyping模板：</span></h4>
         <p>只有一个增删查改。</p>
     </div>
-    
 </div>
+<script src="../../lib/jquery/dist/jquery.min.js"></script>
+<script>
+    $.get("../../readme/apk", function (result) { });
+</script>
