--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -13,7 +13,8 @@
 <div class="box">
     <div class="box-body" style="padding-left:20px;">
         <h2 style="margin-top:10px;"><span style="font-weight:bold;">BitAdminCore介绍</span></h2>
-        <p>BitAdminCore是基于jQuery，Bootstrap，AdminLTE 的 NET Core开发框架，目前仅支持mssql数据库。</p>
+        <p>BitAdminCore是基于jQuery，Bootstrap，AdminLTE，MUI 的 NET Core开发框架，目前仅支持mssql数据库。</p>
+        <p>项目地址：<a href="https://github.com/chenyinxin/cookiecutter-bitadmin-core" target="_blank">https://github.com/chenyinxin/cookiecutter-bitadmin-core</a></p>
         <h4><span style="font-weight:bold;">架构思想：</span></h4>
         <p>定位管理应用程序快速开发能力，以程序易读性为核心。</p>
         <p>采用布局与逻辑分离、前端后端分离的思路，降低耦合度。</p>
