--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layout.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layout.html
@@ -69,7 +69,7 @@
         <div class="content-wrapper">
             <section class="content-header">
                 <h1>
-                    <span class="header-pageName"></span>
+                    <span class="header-pageName-title"></span>
                     <small class="header-PageDesc"></small>
                 </h1>
                 <ol class="breadcrumb">
